@@ -2,6 +2,7 @@
  - fix: start even if DCOR is down
  - fix: do not display mean upload rate during upload
  - enh: increase verbosity of CKANAPI
+ - enh: implement resource compression (#6)
  - ref: move connectivity check and user database update to separate
    background threads
  - ref: store traceback of failed upload in job info
